# compressor

./: CMakeLists.txt  README.md  codigos.txt  prueba_comprimida.txt  prueba_descomprimida.txt  prueba_huffman_descomprimida.txt  prueba_huffmancodigos.txt
include/: escritor.h  huffman.h  nodoArbol.h  rlc.h
src/: escritor.cpp  huffman.cpp  main.cpp  nodoArbol.cpp  rlc.cpp
